--- a/S2-TA2/Ejercicio1.ipynb
+++ b/S2-TA2/Ejercicio1.ipynb
@@ -20,31 +20,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "2924f651",
    "metadata": {},
    "outputs": [],
    "source": [
     "def sustituir(cadena):\n",
-    "    texto_cambiado = cadena[0] + \"X\" + cadena[2:-2] + \"Y\" + cadena[-1]\n",
-    "    return texto_cambiado"
+    "    lista = list(cadena)\n",
+    "\n",
+    "    lista[1], lista[-2] = lista[-2], lista[1]\n",
+    "\n",
+    "    return \"\".join(lista)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "c21d2132",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "Tu función no retorna la cadena correcta.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 38\u001b[39m\n\u001b[32m     35\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m sustituir(cadena_prueba)[\u001b[32m2\u001b[39m] != \u001b[33m\"\u001b[39m\u001b[33ms\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mTu función una posición que no debería. Recuerda que en Python la indexación inicia en 0\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     37\u001b[39m \u001b[38;5;66;03m# Caso 9: retorna una cadena distinta de la esperada\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m38\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m sustituir(cadena_prueba) == \u001b[33m\"\u001b[39m\u001b[33mUea cadena con mayor cantidad de caracterns\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mTu función no retorna la cadena correcta.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     39\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m sustituir(cadena) == \u001b[33m\"\u001b[39m\u001b[33mAtchivos de texro\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mTu función no retorna la cadena correcta.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     41\u001b[39m \u001b[38;5;66;03m# Mensaje de felicitaciones\u001b[39;00m\n",
-      "\u001b[31mAssertionError\u001b[39m: Tu función no retorna la cadena correcta."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
      ]
     }
    ],
