--- a/S2-TA2/Ejercicio2.ipynb
+++ b/S2-TA2/Ejercicio2.ipynb
@@ -20,31 +20,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "id": "90a43fb7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def archivo_a_lista(ruta: str) -> list:\n",
-    "    with open(ruta, \"r\", encoding=\"utf-8\") as f:\n",
-    "        return f.readlines()"
+    "def archivo_a_lista(directorio) -> list:\n",
+    "    with open(directorio, \"r\", encoding=\"utf-8\") as i:\n",
+    "        lineas = i.readlines()\n",
+    "        if lineas and not lineas[-1].endswith(\"\\n\"):\n",
+    "            lineas[-1] = lineas[-1] + \"\\n\"\n",
+    "        return lineas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
    "id": "8e52e474",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "Tu función devuelve una lista errada.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[24]\u001b[39m\u001b[32m, line 44\u001b[39m\n\u001b[32m     34\u001b[39m \u001b[38;5;66;03m# Caso 8: la lista es incorrecta\u001b[39;00m\n\u001b[32m     35\u001b[39m resultado_prueba = [\u001b[33m'\u001b[39m\u001b[33mEstimado estudiante.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m'\u001b[39m,\n\u001b[32m     36\u001b[39m                     \u001b[33m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m'\u001b[39m,\n\u001b[32m     37\u001b[39m                     \u001b[33m'\u001b[39m\u001b[33mEste archivo de texto es para uso exclusivo del auto-calificador.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m'\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m     41\u001b[39m                     \u001b[33m'\u001b[39m\u001b[33mAgradecemos su colaboración,\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m'\u001b[39m,\n\u001b[32m     42\u001b[39m                     \u001b[33m'\u001b[39m\u001b[33mEquipo de Laboratorio Computacional de Analytics.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m'\u001b[39m]\n\u001b[32m---> \u001b[39m\u001b[32m44\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m archivo_a_lista(directorio_prueba) == resultado_prueba, \u001b[33m\"\u001b[39m\u001b[33mTu función devuelve una lista errada.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     46\u001b[39m \u001b[38;5;66;03m# Mensaje de felicitaciones\u001b[39;00m\n\u001b[32m     47\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mFelicidades, realizaste este ejercicio correctamente.\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mAssertionError\u001b[39m: Tu función devuelve una lista errada."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
      ]
     }
    ],
