--- a/S2-TA2/Ejercicio3.ipynb
+++ b/S2-TA2/Ejercicio3.ipynb
@@ -10,31 +10,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c42fde8a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Ejercicio2 import archivo_a_lista\n",
-    "\n",
+    "directorio = \"./Archivos/tesoro.txt\"\n",
     "lista_paises = ['Japón', 'Francia']\n",
     "lineas = archivo_a_lista(directorio)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "171a75d7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def filtrar_paises(lista_paises):\n",
+    "    return [linea for linea in lineas if any(pais in linea for pais in lista_paises)]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "5d263681",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## AUTO-CALIFICADOR\n",
     "\n",
@@ -44,13 +54,13 @@
     "lista_paises = ['Japón', 'Francia']\n",
     "lista_paises_prueba = ['Suiza', 'Noruega', 'Tailandia', 'Kuwait']\n",
     "resultado_prueba_ej_2 = ['Estimado estudiante.\\n',\n",
-    "                         '\\n',\n",
-    "                         'Este archivo de texto es para uso exclusivo del auto-calificador.\\n',\n",
-    "                         'Evite borrar, mover o editar de cualquier forma su contenido.\\n',\n",
-    "                         '\\n',\n",
-    "                         '\\n',\n",
-    "                         'Agradecemos su colaboración,\\n',\n",
-    "                         'Equipo de Laboratorio Computacional de Analytics.\\n']\n",
+    "                        '\\n',\n",
+    "                        'Este archivo de texto es para uso exclusivo del auto-calificador.\\n',\n",
+    "                        'Evite borrar, mover o editar de cualquier forma su contenido.\\n',\n",
+    "                        '\\n',\n",
+    "                        '\\n',\n",
+    "                        'Agradecemos su colaboración,\\n',\n",
+    "                        'Equipo de Laboratorio Computacional de Analytics.\\n']\n",
     "\n",
     "\n",
     "# Caso 0: no ha implementado el ejercicio 2:\n",
@@ -89,7 +99,7 @@
     "\n",
     "# Caso 7: la lista es incorrecta\n",
     "resultado = ['Japón\\t1261.5\\t1260.4\\t1266.5\\t1272.6\\t1268.6\\t1211.8\\t1155.2\\t\\n',\n",
-    "             'Francia\\t144.2\\t130.5\\t137.7\\t156.0\\t147.6\\t134.0\\t127.7\\t\\n']\n",
+    "            'Francia\\t144.2\\t130.5\\t137.7\\t156.0\\t147.6\\t134.0\\t127.7\\t\\n']\n",
     "\n",
     "resultado_prueba = ['Suiza\\t247.4\\t243.1\\t241.3\\t244.6\\t243.7\\t238.1\\t237.5\\t\\n',\n",
     "                    'Noruega\\t89.5\\t87.6\\t93.2\\t98.0\\t103.3\\t97.7\\t90.1\\t\\n',\n",
@@ -105,8 +115,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
