--- a/S2-TA2/Ejercicio3.ipynb
+++ b/S2-TA2/Ejercicio3.ipynb
@@ -10,11 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "c42fde8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
+    "%run Ejercicio2.ipynb  \n",
     "directorio = \"./Archivos/tesoro.txt\"\n",
     "lista_paises = ['Japón', 'Francia']\n",
     "lineas = archivo_a_lista(directorio)"
