--- a/SEMANA 3/S3-TA1/Ejercicio1.ipynb
+++ b/SEMANA 3/S3-TA1/Ejercicio1.ipynb
@@ -36,7 +36,11 @@
    "id": "9a1f845a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def promedio(arr1, arr2):\n",
+    "    concatenado = np.hstack((arr1, arr2))\n",
+    "    return concatenado.mean()"
+   ]
   },
   {
    "cell_type": "code",
