--- a/SEMANA 4/Ejercicio 2.ipynb
+++ b/SEMANA 4/Ejercicio 2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "97cc2156",
    "metadata": {},
    "outputs": [],
@@ -18,12 +18,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.linear_model import LinearRegression\n",
+    "import numpy.testing as npt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "501dc9a9",
    "metadata": {},
    "outputs": [
@@ -48,7 +49,7 @@
        " dtype: int64)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,41 +64,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "8a37067c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def crear_train_test(datos, test_size=0.3, random_state=42):\n",
-    "    x = datos[0]\n",
-    "    y = datos[1]\n",
-    "    x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=test_size, random_state=random_state)\n",
-    "    return (x_train, x_test, y_train, y_test)"
+    "def crear_train_test(datos):\n",
+    "    x, y = datos\n",
+    "    x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=0)\n",
+    "    return x_train, x_test, y_train, y_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "dc251e08",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/tmp/ipykernel_27551/2534127020.py:33: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  assert crear_train_test(datos)[0].mean()[2] == 15.25 and crear_train_test(datos)[0].iloc[1,1] == 3, \"Los valores de X_train son incorrectos.\"\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "Los valores de X_train son incorrectos.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 33\u001b[39m\n\u001b[32m     30\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(crear_train_test(datos)[\u001b[32m2\u001b[39m]) == pd.Series \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(crear_train_test(datos)[\u001b[32m3\u001b[39m]) == pd.Series, \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mTu función debe retornar un objeto de tipo \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpd.Series.\u001b[34m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m como y_train y y_test.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     32\u001b[39m \u001b[38;5;66;03m# Caso 5: respuesta X_train\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m33\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m crear_train_test(datos)[\u001b[32m0\u001b[39m].mean()[\u001b[32m2\u001b[39m] == \u001b[32m15.25\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m crear_train_test(datos)[\u001b[32m0\u001b[39m].iloc[\u001b[32m1\u001b[39m,\u001b[32m1\u001b[39m] == \u001b[32m3\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mLos valores de X_train son incorrectos.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     35\u001b[39m \u001b[38;5;66;03m# Caso 6: respuesta X_test\u001b[39;00m\n\u001b[32m     36\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n",
-      "\u001b[31mAssertionError\u001b[39m: Los valores de X_train son incorrectos."
+      "  assert crear_train_test(datos)[0].mean()[2] == 15.25 and crear_train_test(datos)[0].iloc[1,1] == 3, \"Los valores de X_train son incorrectos.\"\n",
+      "/tmp/ipykernel_27551/2534127020.py:37: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  npt.assert_approx_equal(crear_train_test(datos)[1].mean()[2], 28.333333333333332)\n",
+      "/tmp/ipykernel_27551/2534127020.py:51: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  npt.assert_approx_equal(crear_train_test(datos_test)[0].mean()[2], 27.555555555555557)\n"
      ]
     }
    ],
