--- a/SEMANA 4/Ejercicio 3.ipynb
+++ b/SEMANA 4/Ejercicio 3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f9faddf5",
    "metadata": {},
    "outputs": [],
@@ -18,15 +18,54 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.linear_model import LinearRegression\n",
+    "import numpy.testing as npt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "66715dd9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(   x1  x2  x3\n",
+       " 0   6   3  22\n",
+       " 1   8   1  35\n",
+       " 2   6   2  41\n",
+       " 3   4   2   3\n",
+       " 4   5   1  18\n",
+       " 5   7   4  18\n",
+       " 6   8   5   9,\n",
+       "    x1  x2  x3\n",
+       " 0   7   5  47\n",
+       " 1   6   4  50\n",
+       " 2   5   4  11\n",
+       " 3   3   4  42\n",
+       " 4   5   4   1,\n",
+       " 0    9\n",
+       " 1    1\n",
+       " 2    5\n",
+       " 3    3\n",
+       " 4    9\n",
+       " 5    9\n",
+       " 6    6\n",
+       " dtype: int64,\n",
+       " 0    10\n",
+       " 1     3\n",
+       " 2     7\n",
+       " 3     6\n",
+       " 4     8\n",
+       " dtype: int64)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "datos = (pd.DataFrame({\"x1\":[6,  8,  6,  4,  5,  7,  8],\n",
     "                    \"x2\":[3,  1,  2,  2,  1,  4,  5],\n",
@@ -41,18 +80,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "356a1d45",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def crear_modelo(datos):\n",
+    "    x_train, x_test, y_train, y_test = datos\n",
+    "    modelo = LinearRegression()\n",
+    "    modelo.fit(x_train, y_train)\n",
+    "    return modelo"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "cf82286c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## AUTO-CALIFICADOR\n",
     "\n",
@@ -121,8 +174,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
