--- a/SEMANA 4/Ejercicio 5.ipynb
+++ b/SEMANA 4/Ejercicio 5.ipynb
@@ -11,22 +11,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "215e831a",
+   "id": "fd36049d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.linear_model import LinearRegression\n",
+    "import numpy.testing as npt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f04df823",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/codespace/.local/lib/python3.12/site-packages/sklearn/base.py:440: InconsistentVersionWarning: Trying to unpickle estimator LinearRegression from version 0.22.2.post1 when using version 1.7.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "\n",
@@ -45,14 +56,41 @@
    "id": "1fae46af",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calcular_precision(modelo, X_test, y_test):\n",
+    "    y_pred = np.dot(X_test, modelo.coef_) + modelo.intercept_\n",
+    "    \n",
+    "    sumRe = np.sum((y_test - y_pred) ** 2)\n",
+    "    sunTo = np.sum((y_test - np.mean(y_test)) ** 2)\n",
+    "    r2 = 1 - (sumRe / sunTo)\n",
+    "    \n",
+    "    return np.float64(r2)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "faa647c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/codespace/.local/lib/python3.12/site-packages/sklearn/base.py:440: InconsistentVersionWarning: Trying to unpickle estimator LinearRegression from version 0.22.2.post1 when using version 1.7.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "## AUTO-CALIFICADOR\n",
     "\n",
@@ -106,8 +144,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
