--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -629,7 +629,7 @@
     "\n",
     "# Evaluación\n",
     "acc = accuracy_score(y_test, y_pred_class)\n",
-    "print(\"\\n📊 Resultados Regresión Logística:\")\n",
+    "print(\"\\n Resultados Regresión Logística:\")\n",
     "print(f\"Accuracy: {acc:.3f}\")\n",
     "print(\"\\nReporte de clasificación:\")\n",
     "print(classification_report(y_test, y_pred_class))\n",
