--- a/SEMANA 5/prueba.ipynb
+++ b/SEMANA 5/prueba.ipynb
@@ -165,13 +165,11 @@
     }
    ],
    "source": [
-    "# Asegurar carpeta de salida\n",
+    "\n",
     "os.makedirs(\"outputs\", exist_ok=True)\n",
     "\n",
-    "# Archivo CSV (ajusta la ruta si es necesario)\n",
     "DATA_CSV = \"Saber11.csv\"\n",
     "\n",
-    "# Leer CSV completo pero solo columnas necesarias para ahorrar memoria\n",
     "usecols = [\n",
     "    'PERIODO','ESTU_FECHANACIMIENTO','ESTU_GENERO','FAMI_ESTRATOVIVIENDA',\n",
     "    'ESTU_DEPTO_PRESENTACION','COLE_NOMBRE_ESTABLECIMIENTO',\n",
@@ -183,24 +181,19 @@
     "df_full = pd.read_csv(DATA_CSV, low_memory=False)\n",
     "print(\"Datos cargados:\", df_full.shape)\n",
     "\n",
-    "# Tomar muestra de 200.000 filas\n",
     "df = df_full.sample(200000, random_state=42)\n",
     "print(\"Muestra:\", df.shape)\n",
     "\n",
-    "# Crear variable edad\n",
     "df['ESTU_FECHANACIMIENTO'] = pd.to_datetime(df['ESTU_FECHANACIMIENTO'], errors='coerce')\n",
     "df['anio_nac'] = df['ESTU_FECHANACIMIENTO'].dt.year\n",
     "\n",
-    "# Extraer año del periodo (ej: 20221 -> 2022)\n",
     "df['anio_exam'] = df['PERIODO'].astype(str).str[:4].astype(float)\n",
     "df['edad'] = df['anio_exam'] - df['anio_nac']\n",
     "\n",
-    "# Limpiar edades imposibles\n",
     "df.loc[(df['edad'] < 10) | (df['edad'] > 30), 'edad'] = None\n",
     "\n",
     "print(df[['PERIODO','ESTU_FECHANACIMIENTO','anio_nac','anio_exam','edad']].head())\n",
     "\n",
-    "# Distribución de edades\n",
     "plt.figure(figsize=(8,4))\n",
     "edades = df['edad'].dropna().astype(int)\n",
     "bins = range(int(edades.min()), int(edades.max())+2)\n",
@@ -212,7 +205,6 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Conteo por sexo\n",
     "plt.figure(figsize=(6,4))\n",
     "df['ESTU_GENERO'].fillna('Sin dato').value_counts().plot(kind='bar', color='skyblue')\n",
     "plt.title('Conteo por sexo')\n",
@@ -220,7 +212,6 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Promedio de puntaje global por estrato\n",
     "df['estrato_num'] = (\n",
     "    df['FAMI_ESTRATOVIVIENDA']\n",
     "    .astype(str)\n",
@@ -228,11 +219,9 @@
     "    .astype(float)\n",
     ")\n",
     "\n",
-    "# Calcular promedio de puntaje global por estrato\n",
     "tabla_estrato = df.groupby('estrato_num')['PUNT_GLOBAL'].mean().dropna().round(1)\n",
     "print(tabla_estrato)\n",
     "\n",
-    "# Graficar\n",
     "plt.figure(figsize=(8,4))\n",
     "tabla_estrato.plot(kind='bar', edgecolor='black')\n",
     "plt.title('Promedio de Puntaje Global por Estrato')\n",
@@ -241,10 +230,8 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Guardar tabla\n",
     "tabla_estrato.to_csv('outputs/promedio_por_estrato.csv')\n",
     "\n",
-    "# Ranking de mejores departamentos por puntaje global\n",
     "tabla_deptos = df.groupby('ESTU_DEPTO_PRESENTACION')['PUNT_GLOBAL'].mean().dropna().round(1)\n",
     "top_deptos = tabla_deptos.sort_values(ascending=False).head(10)\n",
     "print(top_deptos)\n",
@@ -262,15 +249,12 @@
     "materias = ['PUNT_INGLES','PUNT_MATEMATICAS','PUNT_SOCIALES_CIUDADANAS',\n",
     "            'PUNT_C_NATURALES','PUNT_LECTURA_CRITICA']\n",
     "\n",
-    "# Convertir materias a numérico\n",
     "df[materias] = df[materias].apply(pd.to_numeric, errors='coerce')\n",
     "\n",
-    "# Agrupar por departamento y calcular promedio\n",
     "materias_por_depto = df.groupby('ESTU_DEPTO_PRESENTACION')[materias].mean().round(1)\n",
     "\n",
-    "print(materias_por_depto.head())  # ejemplo de tabla\n",
+    "print(materias_por_depto.head())\n",
     "\n",
-    "# Gráfico tipo heatmap\n",
     "plt.figure(figsize=(12,8))\n",
     "sns.heatmap(materias_por_depto, annot=True, cmap=\"YlGnBu\", fmt=\".1f\")\n",
     "plt.title('Promedio de Puntajes por Materia y Departamento')\n",
@@ -288,16 +272,12 @@
     "        print(f\"Columna {var} no encontrada. Omitiendo.\")\n",
     "        continue\n",
     "\n",
-    "    # Normalizar: minúsculas y quitar espacios\n",
     "    s = df[var].astype(str).str.strip().str.lower()\n",
     "\n",
-    "    # Mapear a 'Si' / 'No'\n",
     "    s = s.replace({'sí': 'si', 'si': 'si', 's': 'si', '1': 'si','no': 'no', 'n': 'no', '0': 'no'})\n",
     "\n",
-    "    # Filtrar solo si/no\n",
     "    s = s.where(s.isin(['si', 'no']))\n",
     "\n",
-    "    # Contar y graficar\n",
     "    counts = s.value_counts().reindex(['si','no']).fillna(0)\n",
     "\n",
     "    plt.figure(figsize=(5,3))\n",
@@ -319,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "3801c48a",
    "metadata": {},
    "outputs": [
@@ -454,22 +434,19 @@
     }
    ],
    "source": [
-    "# Normalizar nombres de columnas\n",
+    "\n",
     "df.columns = df.columns.str.strip().str.upper()\n",
     "\n",
-    "# Variables de interés\n",
     "variables_num = ['PUNT_GLOBAL', 'PUNT_INGLES', 'PUNT_MATEMATICAS',\n",
     "'PUNT_SOCIALES_CIUDADANAS', 'PUNT_C_NATURALES', 'PUNT_LECTURA_CRITICA']\n",
     "\n",
     "variables_cat = ['FAMI_ESTRATOVIVIENDA', 'ESTU_GENERO', 'FAMI_TIENEINTERNET']\n",
     "\n",
-    "# Numéricas\n",
-    "desc_num = df[variables_num].describe().T[['mean', '50%', 'std']]  # media, mediana, desviación\n",
+    "desc_num = df[variables_num].describe().T[['mean', '50%', 'std']]\n",
     "desc_num.rename(columns={'50%':'median', 'std':'std_dev'}, inplace=True)\n",
     "print(\"Estadísticas descriptivas de puntajes:\\n\")\n",
     "print(desc_num)\n",
     "\n",
-    "# Categóricas\n",
     "for var in variables_cat:\n",
     "    if var in df.columns:\n",
     "        print(f\"\\nDistribución de {var}:\")\n",
@@ -487,7 +464,6 @@
     "plt.title(\"Boxplot de PUNT_GLOBAL\")\n",
     "plt.show()\n",
     "\n",
-    "# Por estrato\n",
     "if 'FAMI_ESTRATOVIVIENDA' in df.columns:\n",
     "    plt.figure(figsize=(8,5))\n",
     "    sns.boxplot(x='FAMI_ESTRATOVIVIENDA', y='PUNT_GLOBAL', data=df)\n",
@@ -496,14 +472,12 @@
     "    plt.ylabel(\"Puntaje Global\")\n",
     "    plt.show()\n",
     "\n",
-    "# Por género\n",
     "if 'ESTU_GENERO' in df.columns:\n",
     "    plt.figure(figsize=(6,4))\n",
     "    sns.boxplot(x='ESTU_GENERO', y='PUNT_GLOBAL', data=df)\n",
     "    plt.title(\"Puntaje Global por Género\")\n",
     "    plt.show()\n",
     "\n",
-    "# Por internet\n",
     "for var in ['FAMI_TIENEINTERNET']:\n",
     "    if var in df.columns:\n",
     "        plt.figure(figsize=(6,4))\n",
@@ -539,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "4a12cf35",
    "metadata": {},
    "outputs": [
@@ -579,27 +553,21 @@
     }
    ],
    "source": [
-    "# Normalizar nombres\n",
+    "\n",
     "df.columns = df.columns.str.strip().str.upper()\n",
     "\n",
-    "# Filtrar filas con NaN en PUNT_GLOBAL\n",
     "df_model = df.dropna(subset=['PUNT_GLOBAL']).copy()\n",
     "\n",
-    "# Variable objetivo\n",
     "y = df_model['PUNT_GLOBAL']\n",
     "\n",
-    "# Variables predictoras\n",
     "X = df_model[['FAMI_ESTRATOVIVIENDA','ESTU_GENERO','FAMI_TIENEINTERNET',\n",
-    "              'FAMI_TIENECOMPUTADOR','FAMI_TIENEAUTOMOVIL']].copy()\n",
+    "'FAMI_TIENECOMPUTADOR','FAMI_TIENEAUTOMOVIL']].copy()\n",
     "\n",
-    "# Convertir categóricas a dummies\n",
     "X = pd.get_dummies(X, drop_first=True)\n",
     "\n",
-    "# División entrenamiento/prueba\n",
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
     "\n",
-    "# Entrenamiento\n",
     "from sklearn.linear_model import LinearRegression\n",
     "lin_reg = LinearRegression()\n",
     "lin_reg.fit(X_train, y_train)\n",
@@ -608,7 +576,6 @@
     "\n",
     "y_pred = lin_reg.predict(X_test)\n",
     "\n",
-    "# Evaluación\n",
     "r2 = r2_score(y_test, y_pred)\n",
     "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
     "\n",
@@ -616,7 +583,6 @@
     "print(f\"R²: {r2:.3f}\")\n",
     "print(f\"RMSE: {rmse:.2f}\")\n",
     "\n",
-    "# Crear variable binaria: alto desempeño (>= mediana)\n",
     "umbral = y.median()\n",
     "y_binaria = (y >= umbral).astype(int)\n",
     "\n",
@@ -627,14 +593,12 @@
     "\n",
     "y_pred_class = log_reg.predict(X_test)\n",
     "\n",
-    "# Evaluación\n",
     "acc = accuracy_score(y_test, y_pred_class)\n",
     "print(\"\\n📊 Resultados Regresión Logística:\")\n",
     "print(f\"Accuracy: {acc:.3f}\")\n",
     "print(\"\\nReporte de clasificación:\")\n",
     "print(classification_report(y_test, y_pred_class))\n",
     "\n",
-    "# Matriz de confusión\n",
     "cm = confusion_matrix(y_test, y_pred_class)\n",
     "plt.figure(figsize=(5,4))\n",
     "sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\", xticklabels=['Bajo','Alto'], yticklabels=['Bajo','Alto'])\n",
