--- a/SEMANA 6/prueba.ipynb
+++ b/SEMANA 6/prueba.ipynb
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "63537098",
    "metadata": {},
    "outputs": [
@@ -1011,7 +1011,7 @@
     }
    ],
    "source": [
-    "# Entrenamiento del modelo de regresión lineal\n",
+    "# Entrenamiento del modelo en regresión lineal\n",
     "\n",
     "modelo = LinearRegression()\n",
     "modelo.fit(X_train, y_train)"
